crates/wolf_codegen_llvm/tests/snapshots/llvm_goldens__llvm_range_fact_metadata.snap
---
source: crates/wolf_codegen_llvm/tests/llvm_goldens.rs
expression: t
---
; wolf release tier - WIR -> LLVM IR
source_filename = "wolf"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-i128:128-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

define internal i64 @"_Wranged$73db223180db89e8"(ptr %p0) nounwind {
b0:
  %t1 = load i64, ptr %p0, align 8, !range !3, !alias.scope !2
  ret i64 %t1
}


!0 = distinct !{!"wolf.region.domain.ranged"}
!1 = distinct !{!"ranged.r0", !0}
!2 = !{!1}
!3 = !{i64 0, i64 10}
