crates/wolf_codegen_llvm/tests/snapshots/llvm_goldens__llvm_region_freeze_ok.snap
---
source: crates/wolf_codegen_llvm/tests/llvm_goldens.rs
expression: t
---
; wolf release tier - WIR -> LLVM IR
source_filename = "wolf"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-i128:128-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

define internal i64 @"_Wbuild_config$36335e30739b904b"() nounwind {
b0:
  %slot1 = alloca [8 x i8], align 8
  store i64 42, ptr %slot1, align 8
  %t1 = load i64, ptr %slot1, align 1
  ret i64 %t1
}

define internal i64 @"_Wmain$70962f7628a8b469"() nounwind {
b0:
  %slot1 = alloca [8 x i8], align 8
  %t1 = call ptr @__wolf_rt_region_new()
  %t2 = call i64 @"_Wbuild_config$36335e30739b904b"()
  store i64 %t2, ptr %slot1, align 1
  call void @__wolf_rt_region_freeze(ptr %t1)
  %t3 = load i64, ptr %slot1, align 8
  %t4 = icmp eq i64 %t3, 42
  %t5 = zext i1 %t4 to i8
  %t6 = icmp ne i8 %t5, 0
  br i1 %t6, label %b1, label %b2
b1:
  br label %b3
b2:
  br label %b3
b3:
  %v0 = phi i64 [ 0, %b1 ], [ 1, %b2 ]
  ret i64 %v0
}

declare void @__wolf_rt_region_freeze(ptr) nounwind
declare ptr @__wolf_rt_region_new() nounwind
