crates/wolf_codegen_llvm/tests/snapshots/llvm_goldens__llvm_shape_unroll_scopes.snap
---
source: crates/wolf_codegen_llvm/tests/llvm_goldens.rs
expression: t
---
; wolf release tier - WIR -> LLVM IR
source_filename = "wolf"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-i128:128-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

define internal i64 @"_Wmain$70962f7628a8b469"() nounwind {
b0:
  %t1 = call ptr @__wolf_rt_region_new()
  %t2 = call noalias align 16 ptr @__wolf_rt_region_alloc(ptr %t1, i64 8)
  %t3 = call ptr @__wolf_rt_region_new()
  %t4 = call noalias align 16 ptr @__wolf_rt_region_alloc(ptr %t3, i64 8)
  store i64 0, ptr %t2, align 8, !alias.scope !3, !noalias !4
  store i64 0, ptr %t4, align 8, !alias.scope !5, !noalias !6
  br label %b1
b1:
  %v12 = phi i64 [ 0, %b0 ], [ %t14, %cont16 ]
  %t5 = icmp slt i64 %v12, 4
  %t6 = zext i1 %t5 to i8
  %t7 = icmp ne i8 %t6, 0
  br i1 %t7, label %b2, label %b3
b2:
  %t8 = load i64, ptr %t2, align 8, !alias.scope !3, !noalias !4
  %t9 = add i64 %t8, %v12
  store i64 %t9, ptr %t2, align 8, !alias.scope !3, !noalias !4
  %t10 = load i64, ptr %t2, align 8, !alias.scope !3, !noalias !4
  %t11 = load i64, ptr %t4, align 8, !alias.scope !5, !noalias !6
  %t12 = add i64 %t11, %t10
  store i64 %t12, ptr %t4, align 8, !alias.scope !5, !noalias !6
  %t13 = call { i64, i1 } @llvm.sadd.with.overflow.i64(i64 %v12, i64 1)
  %t14 = extractvalue { i64, i1 } %t13, 0
  %t15 = extractvalue { i64, i1 } %t13, 1
  br i1 %t15, label %trap1, label %cont16, !prof !7
cont16:
  br label %b1
b3:
  %t17 = load i64, ptr %t2, align 8, !alias.scope !3, !noalias !4
  %t18 = load i64, ptr %t4, align 8, !alias.scope !5, !noalias !6
  %t19 = add i64 %t17, %t18
  %t20 = and i64 %t19, 63
  ret i64 %t20
trap1:
  call void @__wolf_rt_trap(i32 1)
  unreachable
}

declare noalias noundef align 16 ptr @__wolf_rt_region_alloc(ptr, i64) nounwind
declare ptr @__wolf_rt_region_new() nounwind
declare void @__wolf_rt_trap(i32) cold noreturn nounwind
declare { i64, i1 } @llvm.sadd.with.overflow.i64(i64, i64)

!0 = distinct !{!"wolf.region.domain.main"}
!1 = distinct !{!"main.r0", !0}
!2 = distinct !{!"main.r1", !0}
!3 = !{!1}
!4 = !{!2}
!5 = !{!2}
!6 = !{!1}
!7 = !{!"branch_weights", i32 1, i32 2000}
