crates/wolf_codegen_llvm/tests/snapshots/llvm_goldens__llvm_task_env_loop.snap
---
source: crates/wolf_codegen_llvm/tests/llvm_goldens.rs
expression: t
---
; wolf release tier - WIR -> LLVM IR
source_filename = "wolf"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-i128:128-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@"_W.str.0" = private unnamed_addr constant [1 x i8] c"s", align 1

define internal i64 @"_Wmain.task0.entry$b900cddcdfe27000"(ptr noalias noundef %p0) nounwind {
b0:
  %t1 = load i64, ptr %p0, align 8, !alias.scope !2
  ret i64 %t1
}

define internal i64 @"_Wmain$70962f7628a8b469"() nounwind {
b0:
  %t1 = call ptr @"__wolf_rt_scope_new"(ptr @"_W.str.0", i64 1)
  %t2 = call ptr @__wolf_rt_region_new()
  br label %b1
b1:
  %v0 = phi i64 [ 1, %b0 ], [ %t5, %b3 ]
  %t3 = call noalias align 16 dereferenceable(8) ptr @__wolf_rt_region_alloc(ptr %t2, i64 8)
  store i64 %v0, ptr %t3, align 8, !alias.scope !5
  call void @"__wolf_rt_scope_spawn"(ptr %t1, ptr @"_Wmain.task0.entry$b900cddcdfe27000", ptr %t3, ptr @"_W.str.0", i64 1)
  %t4 = call { i64, i1 } @llvm.sadd.with.overflow.i64(i64 %v0, i64 1)
  %t5 = extractvalue { i64, i1 } %t4, 0
  %t6 = extractvalue { i64, i1 } %t4, 1
  br i1 %t6, label %trap1, label %cont7, !prof !6
cont7:
  %t8 = icmp eq i64 %v0, 4
  %t9 = zext i1 %t8 to i8
  %t10 = icmp ne i8 %t9, 0
  br i1 %t10, label %b2, label %b3
b2:
  %t11 = call i64 @"__wolf_rt_scope_join_free"(ptr %t1)
  call void @__wolf_rt_region_free(ptr %t2)
  ret i64 %t11
b3:
  br label %b1
trap1:
  call void @__wolf_rt_trap(i32 1)
  unreachable
}

declare noalias noundef align 16 ptr @__wolf_rt_region_alloc(ptr, i64) nounwind
declare void @__wolf_rt_region_free(ptr) nounwind
declare ptr @__wolf_rt_region_new() nounwind
declare i64 @"__wolf_rt_scope_join_free"(ptr) nounwind
declare ptr @"__wolf_rt_scope_new"(ptr, i64) nounwind
declare void @"__wolf_rt_scope_spawn"(ptr, ptr, ptr, ptr, i64) nounwind
declare void @__wolf_rt_trap(i32) cold noreturn nounwind
declare { i64, i1 } @llvm.sadd.with.overflow.i64(i64, i64)

!0 = distinct !{!"wolf.region.domain.main.task0.entry"}
!1 = distinct !{!"main.task0.entry.r0", !0}
!2 = !{!1}
!3 = distinct !{!"wolf.region.domain.main"}
!4 = distinct !{!"main.r0", !3}
!5 = !{!4}
!6 = !{!"branch_weights", i32 1, i32 2000}
